force-app/main/default/objects/Account/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <label>Blood Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>A+</fullName><default>false</default><label>A+</label></value>
            <value><fullName>A-</fullName><default>false</default><label>A-</label></value>
            <value><fullName>B+</fullName><default>false</default><label>B+</label></value>
            <value><fullName>B-</fullName><default>false</default><label>B-</label></value>
            <value><fullName>AB+</fullName><default>false</default><label>AB+</label></value>
            <value><fullName>AB-</fullName><default>false</default><label>AB-</label></value>
            <value><fullName>O+</fullName><default>false</default><label>O+</label></value>
            <value><fullName>O-</fullName><default>false</default><label>O-</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>