force-app/main/default/objects/Account/fields/Current_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Current_Treatment__c</fullName>
    <label>Current Treatment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>