force-app/main/default/objects/Account/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <label>Insurance Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>