force-app/main/default/objects/Account/fields/Is_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is High Risk</label>
    <type>Checkbox</type>
</CustomField>