force-app/main/default/objects/Account/fields/Preferred_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Hospital__c</fullName>
    <label>Preferred Hospital</label>
    <referenceTo>Hospital__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>