force-app/main/default/objects/Account/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>English</fullName><default>true</default><label>English</label></value>
            <value><fullName>Hindi</fullName><default>false</default><label>Hindi</label></value>
            <value><fullName>Hinglish</fullName><default>false</default><label>Hinglish</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>