force-app/main/default/objects/Account/fields/Primary_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis__c</fullName>
    <label>Primary Diagnosis</label>
    <length>200</length>
    <type>Text</type>
</CustomField>